[package]
name = "display-pitch"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
cpal = "0.15.3"
dasp_sample = "0.11.0"
iced = "0.13.1"
pitch-detector = { git = "https://github.com/mherrerarendon/pitch-detector", version = "0.3.1" }
snafu = { version = "0.8.5", features = ["rust_1_81"] }

[profile.dev]
panic = "abort"
